proper auth navbar

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,5 +7,5 @@ $blue-jeans: #4ea8deff;
 $vivid-sky-blue: #48bfe3ff;
 $sky-blue-crayola: #56cfe1ff;
 $medium-turquoise: #64dfdfff;
-$secondary: #72efddff;
+$secondary: #80ffdb;
 $aquamarine: #80ffdbff;
