added logged out card interactions

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,7 @@
 // Customizations Here (Optional)
+$tooltip-background-opacity: 1;
 
 // Bulma Import
+
 @import '~bulma';
+@import '@creativebulma/bulma-tooltip';
